force-app/main/default/objects/RRD_Basic_Auth__c/RRD_Basic_Auth__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RRD Basic Auth</label>
</CustomObject>