force-app/main/default/objects/RRD_Basic_Auth__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <length>10</length>
    <type>Text</type>
</CustomField>