force-app/main/default/objects/RRD_Basic_Auth__c/fields/Internal_URL__c.field-meta.xml
<CustomField>
    <fullName>Internal_URL__c</fullName>
    <label>Internal URL</label>
    <type>Url</type>
</CustomField>