force-app/main/default/objects/RRD_Basic_Auth__c/fields/RRD_CustomPoint_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>RRD_CustomPoint_Login_URL__c</fullName>
    <label>RRD CustomPoint Login URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>